export excel to word so as to write a book

--- a/Shang4Gu3In1.csproj
+++ b/Shang4Gu3In1.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Cells" Version="24.11.0" />
+    <PackageReference Include="Aspose.Words" Version="25.10.0" />
   </ItemGroup>
 
 </Project>
