--- a/Shang4Gu3In1.csproj
+++ b/Shang4Gu3In1.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Aspose.Cells" Version="24.11.0" />
     <PackageReference Include="Aspose.Words" Version="25.10.0" />
+    <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
   </ItemGroup>
 
 </Project>
